Se termino de crear el diseño de la pagina home

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@
     margin: 0;
     padding: 0;
 }
+.home{
+    width: 100vw;
+    background-image: url("/fondo.png");
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
