Se logro terminar la search bar, pero aun tiene errores al no encontar un elemento

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 .home{
     width: 100vw;
@@ -8,4 +9,12 @@
     position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.characters{
+    width: 100vw;
+    background-image: url("/fondo.png");
+    position: relative;
+    background-repeat:round;
+    background-size: cover;
+    padding-top: 10vh;
 }
